inline SubProject abstraction into build.sbt