@@ -1,9 +1,35 @@
 import Dependencies._
 import Publishing._
-import SubProject._
+
+/* The base, minimal settings for every project, including the root aggregate project */
+val BaseSettings = Seq(
+  organization := "com.tapad.sbt",
+  scalaVersion := Dependencies.ScalaVersion
+)
+
+/* Common settings for all non-aggregate subprojects */
+val CommonSettings = BaseSettings ++ Seq(
+  scalacOptions ++= Seq("-deprecation", "-language:_"),
+  credentials += Credentials(Path.userHome / ".ivy2" / ".credentials"),
+  resolvers ++= Seq(
+    Repositories.SonatypeSnapshots,
+    Repositories.MavenCentral,
+    Repositories.LocalMaven
+  ),
+  libraryDependencies ++= Seq(
+    "org.scalatest" %% "scalatest" % Dependencies.ScalaTestVersion % "test"
+  )
+)
+
+val PluginSettings = CommonSettings ++ scriptedSettings ++ Seq(
+  sbtPlugin := true,
+  name := "sbt-" + name.value,
+  scriptedLaunchOpts ++= Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value),
+  scriptedBufferLog := false
+)
 
 lazy val root = (project in file("."))
-  .settings(MinimalSettings: _*)
+  .settings(BaseSettings: _*)
   .settings(NoopPublishSettings: _*)
   .aggregate(marathon, templating, templatingUtil, util)
   .enablePlugins(CrossPerProjectPlugin)
